2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/lastfm.c (maybe_submit): Only call submit if neither USER
	nor PASSWORD is the empty string.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (meta_data_changed): New function.
	(starling_run): Connect ST->DB's "changed-entry" signal to it.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (status_kick): Trigger status_update every half
	second.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (worker_thread): Use sqlite_exec instead of
	sqlite_exec_printf where possible.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (busy_handler): If COOKIE is not NULL, set *COOKIE
	to 1.  Reduce pause time.
	(main_thread_busy): New variable.
	(music_db_open): Pass it to sqlite_busy_handler for the main
	sqlite instance.
	(music_db_add_recursive_internal): If SQLITEH is no the main
	instance and MAIN_THREAD_BUSY is greater than 0, pause and then
	decrement MAIN_THREAD_BUSY.
	(meta_data_reader): Likewise.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (new_decoded_pad): Unref AUDIOPAD.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (meta_data_reader): Free TAGS.

2008-11-24  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (new_decoded_pad): Drop reference to AUDIOPAD.

2008-11-24  Neal H. Walfield  <neal@gnu.org>

	* src/utils.h (html_escape_string): Drop string's const
	qualifier.  Note that the this function assumes ownership of
	STRING.  Update callers.
	* src/utils.c (html_escape_string): Drop string's const qualifier.
	If there are no characters that must be rewritten, just return
	STRING.  Otherwise, free string before returning.

2008-11-23  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Check for the gtk_volume_button_new function.
	* src/starling.c (struct _Starling) [!HAVE_GTK_VOLUME_BUTTON_NEW]:
	Remove field volume_button.
	(deserialize) [!HAVE_GTK_VOLUME_BUTTON_NEW]: Don't restore the
	volume's state.